--- a/searchstations.html
+++ b/searchstations.html
@@ -6,6 +6,8 @@
     <meta name="comp1800 template" content="My 1800 App">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Google Icons (Material Design)-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     
     <!-- Bootstrap if we need it -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -55,7 +57,8 @@
                   <p>Location: <span class="card-text"></span></p>
                   <p>Busyness: <span class="card-busy"></span></p>
                   <p>Address: <span class="card-address"></span></p>
-                  <button class="btn btn-primary bookmark-btn">Bookmark</button>
+                  
+                <i class="material-icons">bookmark_border</i>
                   <a href="#" class="btn btn-primary">Report Incident</a>
               </div>
           </div>
