--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>TransitAura</title>
+    <title>Abouts Us - TransitAura</title>
     <meta name="comp1800 template" content="My 1800 App" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -9,7 +9,7 @@
       name="description"
       content="Learn more about TransitAura, our mission, and our team dedicated to enhancing public transit safety."
     />
-    <title>About Us | TransitAura</title>
+    <title>About TransitAura | TransitAura's Story</title>
 
     <!-- Bootstrap if we need it -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -19,6 +19,8 @@
     </script> -->
 
     <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
@@ -36,6 +38,19 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+
+    <style>
+      body {
+      font-family: "Roboto", sans-serif;
+      font-weight: 400;
+      font-style: normal;
+      }
+      p, ul {
+      font-family: "Roboto", sans-serif;
+      font-weight: 200;
+      font-style: normal;
+      }
+    </style>
   </head>
 
   <body id="body">
@@ -46,54 +61,71 @@
     <div id="aboutUs">
       <div>
         <h1 class="h1InAbout">What is TransitAura?</h1>
+        <div>
+          <p>
+            <span style="color: #6699cc">TransitAura</span> provides real-time
+            safety insights and easy access to emergency contacts. empowering
+            transit users to make safe, informed choices while using public
+            transportation.
+          </p>
+        </div>
       </div>
 
-      <div>
-        <p>
-          <span style="color: #6699cc">TransitAura</span> provides real-time
-          safety insights and easy access to emergency contacts. We empower
-          transit users to make safe, informed decisions on public transit.
-        </p>
-      </div>
-
-      <div>
+      <div class="story">
         <h1 class="h1InAbout">Our Story</h1>
-      </div>
-      <div>
-        <p>
-          <span style="color: #6699cc">TransitAura</span> began with our mission
-          to make public transit safer and more accessible for everyone.
-        </p>
+        <div>
+          <p>
+            <span style="color: #6699cc">TransitAura</span> began with our mission
+            to make public transit safer and more accessible for everyone.
+          </p>
+        </div>
       </div>
 
-      <div>
+
+      <div class="values">
+        <img src="/public/media/busVector.jpg" alt="image"/>
         <h1 class="h1InAbout">Our Values</h1>
-      </div>
-      <div>
-        <p>
-          2-3 values that define our approach, like "user safety" or "community
-          focus". think back to theme for this term
-        </p>
+        <div>
+          <p>
+            Our core values guide our approach:
+            <ul>
+              <li><strong>User Safety:</strong> We are committed to providing features that prioritize the safety and well-being of transit users.</li>
+              <li><strong>Accessibility:</strong> We believe in making transit information accessible to all, fostering a connected and informed community.</li>
+              <li><strong>Community Focus:</strong> Our app is designed to serve transit riders by helping create a network of safer and more informed travelers.</li>
+            </ul>
+          </p>
+        </div>
       </div>
 
-      <div>
+
+      <div class="vision">
+        <img src="/public/media/skytrain.jpg" alt="image"/>
         <h1 class="h1InAbout">Our Vision for Transit Safety</h1>
-      </div>
-      <div>
-        <p>
-          Every transit user deserves peace of mind. We built this app to help
-          communities stay informed about potential safety issues, creating a
-          safer transit environment for everyone.
-        </p>
+        <div>
+          <p>
+            Every transit user deserves peace of mind when they travel.
+            <span style="color: #6699cc">TransitAura</span> was built with this
+            belief at its core, helping communities stay informed of potential
+            safety concerns and fostering a safer environment for everyone.
+          </p>
+        </div>
       </div>
 
-      <div>
+
+      <div class="team">
+        <img src="/public/media/bcitBurnaby.jpeg" alt="image" />
         <h1 class="h1InAbout">Meet the Team</h1>
         <p>
-          We are three Computer Systems Technology students with a passion for
-          making a difference. With fresh perspectives and a shared commitment
-          to public safety, we've created an app to help transit users stay
-          informed and safe.
+          We are three dedicated Computer Systems Technology students with a
+          passion for making a difference. Our fresh perspectives and shared
+          commitment to public safety have driven us to create an app that
+          empowers transit users to stay informed, safe, and connected.
+        </p>
+        <p>
+          <strong>Why We Built TransitAura:</strong> We saw an opportunity to
+          improve transit experiences by addressing safety concerns. With
+          insights from our coursework and our own transit experiences, we aimed
+          to bridge this gap with a user-friendly, responsive app.
         </p>
       </div>
     </div>
