--- a/searchstations.html
+++ b/searchstations.html
@@ -67,12 +67,35 @@
 </head>
 
 <body>
-    <nav id="navbarPlaceholder"></nav>
+    <nav class="navbar navbar-expand bg-primary fixed-bottom">
+        <div class="container-fluid d-flex justify-content-center">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link text-light" href="/afterLogin/bookmark.html">
+                <img id="bookmark-icon" src="media/bookmark.png" alt="Bookmarked Icon" />
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-light" href="/main.html">
+                <img id="home-icon" src="media/house-door-fill.svg" alt="Home Icon" />
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-light" href="#" onclick="toggleDropupMenu()">
+                <img id="profile-icon" src="media/account.png" alt="Sorry no image" />
+              </a>
+            </li>
+          </ul>
+    
+        </div>
+      </nav>
 
     <div class="back-button-container">
-        <button onclick="goBack()" class="back-button" href="main.html">
+        <a href="main.html">
+        <button>
             ← Back
         </button>
+        </a>
     </div>
 
     <h1 id="search-stations-h1">Search Your Station</h1>
