--- a/text/nav_before_login.html
+++ b/text/nav_before_login.html
@@ -1,23 +1,28 @@
-<!-- <nav class="navbar navbar-expand-lg navbar-light bg-warning">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-            <img src="../images/hikeLogo.png" height="36">
-            Sophia Hikes</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" href="../aboutus.html">About Us</a>
-                </li>
-            </ul>
-            <div class="d-flex">
-                <a class="btn btn-outline-success" href="../login.html">Login</a>
-            </div>
-        </div>
+<!-- READ!
+ COPIED SNIPPET FROM main.html -->
+
+<nav class="navbar navbar-expand bg-primary fixed-bottom">
+    <div class="container-fluid d-flex justify-content-center">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link text-light" href="/aboutus.html">
+            <img src="./media/person-raised-hand.svg" />
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-light" href="/index.html">
+            <img src="./media/house-door-fill.svg" />
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-light" href="/help.html">
+            <img src="./media/question-square-fill.svg" />
+          </a>
+        </li>
+      </ul>
+
     </div>
-</nav> -->
+  </nav>
+
+  
 
